--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
         placeat sit!
       </p>
 
-      <button class="btn">Learn More</button>
-      <button class="btn">Visit Courses</button>
+      <div class="homeBtn">
+        <button class="btn">Learn More</button>
+        <button class="btn">Visit Courses</button>
+      </div>
     </section>
 
     <!-- About -->
