--- a/index.html
+++ b/index.html
@@ -45,11 +45,52 @@
       </div>
     </section>
 
-    <!-- About -->
-    <section id="about"></section>
+    <!-- Features -->
+    <section id="features">
+      <h1>Awesome Features</h1>
+      <p>Genius without education is just like a diamond in a mine...</p>
 
-    <!-- Contact -->
-    <section id="contact"></section>
+      <div id="featureCard">
+        <div class="card">
+          <i class="featureSvg"></i>
+
+          <h3 class="featureHeading">Scholarship Facility</h3>
+
+          <p class="featureDescription">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem a
+            voluptatum provident.
+          </p>
+        </div>
+
+        <div class="card">
+          <i class="featureSvg"></i>
+
+          <h3 class="featureHeading">Co-curriculum Activities</h3>
+
+          <p class="featureDescription">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni aut
+            explicabo quam!
+          </p>
+        </div>
+
+        <div class="card">
+          <i class="featureSvg"></i>
+
+          <h3 class="featureHeading">CBSE Rating</h3>
+
+          <p class="featureDescription">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni aut
+            explicabo quam!
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Rankers -->
+    <section id="rankers">
+      <h1>Our Rankers</h1>
+      <p>People become successful the minute they decide to...</p>
+    </section>
 
     <!-- Faculties -->
     <section id="faculties"></section>
