Facility and Rankers

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         </div>
 
         <ul class="navList">
-          <a href="#home"><li class="navLink">Home</li></a>
+          <a href="#home"
+            ><li class="navLink"><i class="fa-sharp fa-solid fa-house"></i></li
+          ></a>
           <a href="#about"><li class="navLink">About</li></a>
           <a href="#contact"><li class="navLink">Contact</li></a>
           <a href="#faculties"><li class="navLink">Faculties</li></a>
@@ -52,7 +54,7 @@
 
       <div id="featureCard">
         <div class="card">
-          <i class="featureSvg"></i>
+          <i class="featureSvg fa-solid fa-graduation-cap"></i>
 
           <h3 class="featureHeading">Scholarship Facility</h3>
 
@@ -63,7 +65,7 @@
         </div>
 
         <div class="card">
-          <i class="featureSvg"></i>
+          <i class="featureSvg fa-solid fa-people-group"></i>
 
           <h3 class="featureHeading">Co-curriculum Activities</h3>
 
@@ -74,7 +76,7 @@
         </div>
 
         <div class="card">
-          <i class="featureSvg"></i>
+          <i class="featureSvg fa-solid fa-award"></i>
 
           <h3 class="featureHeading">CBSE Rating</h3>
 
@@ -90,6 +92,36 @@
     <section id="rankers">
       <h1>Our Rankers</h1>
       <p>People become successful the minute they decide to...</p>
+
+      <div class="toppers">
+        <div class="rankerCard">
+          <img src="./img/logo.png" alt="" class="rankerImg" />
+          <span class="rankerMarks">99.8</span>
+          <p class="rankerBatch">2023</p>
+          <p class="rankerName">Tanmay</p>
+        </div>
+
+        <div class="rankerCard">
+          <img src="./img/logo.png" alt="" class="rankerImg" />
+          <span class="rankerMarks">99.8</span>
+          <p class="rankerBatch">2023</p>
+          <p class="rankerName">Tanmay</p>
+        </div>
+
+        <div class="rankerCard">
+          <img src="./img/logo.png" alt="" class="rankerImg" />
+          <span class="rankerMarks">99.8</span>
+          <p class="rankerBatch">2023</p>
+          <p class="rankerName">Tanmay</p>
+        </div>
+
+        <div class="rankerCard">
+          <img src="./img/logo.png" alt="" class="rankerImg" />
+          <span class="rankerMarks">99.8</span>
+          <p class="rankerBatch">2023</p>
+          <p class="rankerName">Tanmay</p>
+        </div>
+      </div>
     </section>
 
     <!-- Faculties -->
@@ -99,5 +131,9 @@
     <section id="staff"></section>
 
     <script src="./js/script.js"></script>
+    <!-- <script
+      src="https://kit.fontawesome.com/d61db51a2e.js"
+      crossorigin="anonymous"
+    ></script> -->
   </body>
 </html>
