--- a/index.html
+++ b/index.html
@@ -95,31 +95,47 @@
 
       <div class="toppers">
         <div class="rankerCard">
-          <img src="./img/logo.png" alt="" class="rankerImg" />
-          <span class="rankerMarks">99.8</span>
-          <p class="rankerBatch">2023</p>
-          <p class="rankerName">Tanmay</p>
+          <img src="./img/principle.jpg" alt="" class="rankerImg" />
+          <div class="rankerInfo">
+            <span class="rankerMarks">99.8</span>
+            <div class="rankerBio">
+              <p class="rankerBatch">2023</p>
+              <p class="rankerName">Tanmay</p>
+            </div>
+          </div>
         </div>
 
         <div class="rankerCard">
-          <img src="./img/logo.png" alt="" class="rankerImg" />
-          <span class="rankerMarks">99.8</span>
-          <p class="rankerBatch">2023</p>
-          <p class="rankerName">Tanmay</p>
+          <img src="./img/principle.jpg" alt="" class="rankerImg" />
+          <div class="rankerInfo">
+            <span class="rankerMarks">99.8</span>
+            <div class="rankerBio">
+              <p class="rankerBatch">2023</p>
+              <p class="rankerName">Tanmay</p>
+            </div>
+          </div>
         </div>
 
         <div class="rankerCard">
-          <img src="./img/logo.png" alt="" class="rankerImg" />
-          <span class="rankerMarks">99.8</span>
-          <p class="rankerBatch">2023</p>
-          <p class="rankerName">Tanmay</p>
+          <img src="./img/principle.jpg" alt="" class="rankerImg" />
+          <div class="rankerInfo">
+            <span class="rankerMarks">99.8</span>
+            <div class="rankerBio">
+              <p class="rankerBatch">2023</p>
+              <p class="rankerName">Tanmay</p>
+            </div>
+          </div>
         </div>
 
         <div class="rankerCard">
-          <img src="./img/logo.png" alt="" class="rankerImg" />
-          <span class="rankerMarks">99.8</span>
-          <p class="rankerBatch">2023</p>
-          <p class="rankerName">Tanmay</p>
+          <img src="./img/principle.jpg" alt="" class="rankerImg" />
+          <div class="rankerInfo">
+            <span class="rankerMarks">99.8</span>
+            <div class="rankerBio">
+              <p class="rankerBatch">2023</p>
+              <p class="rankerName">Tanmay</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
