--- a/index.html
+++ b/index.html
@@ -96,44 +96,94 @@
       <div class="toppers">
         <div class="rankerCard">
           <img src="./img/principle.jpg" alt="" class="rankerImg" />
-          <div class="rankerInfo">
-            <span class="rankerMarks">99.8</span>
-            <div class="rankerBio">
-              <p class="rankerBatch">2023</p>
-              <p class="rankerName">Tanmay</p>
-            </div>
+
+          <span class="rankerMarks">99.8%</span>
+
+          <div class="rankerBio">
+            <p class="rankerBatch">2023</p>
+            <p class="rankerName">Tanmay</p>
           </div>
         </div>
 
         <div class="rankerCard">
           <img src="./img/principle.jpg" alt="" class="rankerImg" />
-          <div class="rankerInfo">
-            <span class="rankerMarks">99.8</span>
-            <div class="rankerBio">
-              <p class="rankerBatch">2023</p>
-              <p class="rankerName">Tanmay</p>
-            </div>
+
+          <span class="rankerMarks">99.8%</span>
+
+          <div class="rankerBio">
+            <p class="rankerBatch">2023</p>
+            <p class="rankerName">Tanmay</p>
           </div>
         </div>
 
         <div class="rankerCard">
           <img src="./img/principle.jpg" alt="" class="rankerImg" />
-          <div class="rankerInfo">
-            <span class="rankerMarks">99.8</span>
-            <div class="rankerBio">
-              <p class="rankerBatch">2023</p>
-              <p class="rankerName">Tanmay</p>
-            </div>
+
+          <span class="rankerMarks">99.8%</span>
+
+          <div class="rankerBio">
+            <p class="rankerBatch">2023</p>
+            <p class="rankerName">Tanmay</p>
           </div>
         </div>
 
         <div class="rankerCard">
           <img src="./img/principle.jpg" alt="" class="rankerImg" />
-          <div class="rankerInfo">
-            <span class="rankerMarks">99.8</span>
-            <div class="rankerBio">
-              <p class="rankerBatch">2023</p>
-              <p class="rankerName">Tanmay</p>
+
+          <span class="rankerMarks">99.8%</span>
+
+          <div class="rankerBio">
+            <p class="rankerBatch">2023</p>
+            <p class="rankerName">Tanmay</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Staff -->
+    <section id="staff">
+      <div class="teachers">
+        <div class="staffCard">
+          <img src="./img/principle.jpg" alt="" class="staffImg" />
+
+          <div class="staffInfo">
+            <h2>Ms. Mamta Mehta</h2>
+            <p>The Principal</p>
+
+            <div class="staffSocial">
+              <button class="social"></button>
+              <button class="social"></button>
+              <button class="social"></button>
+            </div>
+          </div>
+        </div>
+
+        <div class="staffCard">
+          <img src="./img/principle.jpg" alt="" class="staffImg" />
+
+          <div class="staffInfo">
+            <h2>Ms. Mamta Mehta</h2>
+            <p>The Principal</p>
+
+            <div class="staffSocial">
+              <button class="social"></button>
+              <button class="social"></button>
+              <button class="social"></button>
+            </div>
+          </div>
+        </div>
+
+        <div class="staffCard">
+          <img src="./img/principle.jpg" alt="" class="staffImg" />
+
+          <div class="staffInfo">
+            <h2>Ms. Mamta Mehta</h2>
+            <p>The Principal</p>
+
+            <div class="staffSocial">
+              <button class="social"></button>
+              <button class="social"></button>
+              <button class="social"></button>
             </div>
           </div>
         </div>
@@ -142,9 +192,6 @@
 
     <!-- Faculties -->
     <section id="faculties"></section>
-
-    <!-- Staff -->
-    <section id="staff"></section>
 
     <script src="./js/script.js"></script>
     <!-- <script
