--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
 
     <!-- Staff -->
     <section id="staff">
+      <h1>Community Experts</h1>
+      <p>Replenish man have thing gathering lights yielding shall you...</p>
+
       <div class="teachers">
         <div class="staffCard">
           <img src="./img/principle.jpg" alt="" class="staffImg" />
@@ -151,9 +154,8 @@
             <p>The Principal</p>
 
             <div class="staffSocial">
-              <button class="social"></button>
-              <button class="social"></button>
-              <button class="social"></button>
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
             </div>
           </div>
         </div>
@@ -166,9 +168,8 @@
             <p>The Principal</p>
 
             <div class="staffSocial">
-              <button class="social"></button>
-              <button class="social"></button>
-              <button class="social"></button>
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
             </div>
           </div>
         </div>
@@ -181,9 +182,8 @@
             <p>The Principal</p>
 
             <div class="staffSocial">
-              <button class="social"></button>
-              <button class="social"></button>
-              <button class="social"></button>
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
             </div>
           </div>
         </div>
@@ -194,9 +194,9 @@
     <section id="faculties"></section>
 
     <script src="./js/script.js"></script>
-    <!-- <script
+    <script
       src="https://kit.fontawesome.com/d61db51a2e.js"
       crossorigin="anonymous"
-    ></script> -->
+    ></script>
   </body>
 </html>
