--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/responsive.css" />
     <link rel="stylesheet" href="./css/utility.css" />
+    <link rel="stylesheet" href="./css/all.min.css" />
   </head>
   <body>
     <!-- Navigation -->
@@ -147,11 +148,11 @@
 
       <div class="teachers">
         <div class="staffCard">
-          <img src="./img/principle.jpg" alt="" class="staffImg" />
+          <img src="./img/founder.jpg" alt="" class="staffImg" />
 
           <div class="staffInfo">
-            <h2>Ms. Mamta Mehta</h2>
-            <p>The Principal</p>
+            <h2>Mr. Bhuwan Bhakuni</h2>
+            <p>The Director</p>
 
             <div class="staffSocial">
               <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -193,10 +194,50 @@
     <!-- Faculties -->
     <section id="faculties"></section>
 
+    <!-- Footer -->
+    <footer>
+      <div>
+        <div class="footerDiv">
+          <h2>Top Products</h2>
+          <p>Manage Reputation</p>
+          <p>Power Tools</p>
+          <p>Manage Website</p>
+          <p>Marketing Service</p>
+        </div>
+        <div class="footerDiv">
+          <h2>Quick Links</h2>
+          <p>Jobs</p>
+          <p>Brand Assets</p>
+          <p>Investor Relations</p>
+          <p>Terms of Service</p>
+        </div>
+        <div class="footerDiv">
+          <h2>Features</h2>
+          <p>Manage Reputation</p>
+          <p>Power Tools</p>
+          <p>Manage Website</p>
+          <p>Marketing Service</p>
+        </div>
+        <div class="footerDiv">
+          <h2>Resources</h2>
+          <p>Jobs</p>
+          <p>Brand Assets</p>
+          <p>Investor Relations</p>
+          <p>Terms of Service</p>
+        </div>
+      </div>
+
+      <div>
+        <p>Copyright &copy; All rights reserved | Made by Tanmay upreti</p>
+
+        <div class="footerSocial">
+          <a href="#"><i class="fa-brands fa-github"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+        </div>
+      </div>
+    </footer>
+
     <script src="./js/script.js"></script>
-    <script
-      src="https://kit.fontawesome.com/d61db51a2e.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="./js/all.min.js"></script>
   </body>
 </html>
